--- a/src/template/main_home.html
+++ b/src/template/main_home.html
@@ -1,5 +1,152 @@
 <main>
+    <div class="choice_of_housing">
+        <div class="container">
+            <div class="row">
+                <div class="col-12 text">
+                    <h1>Підбираємо <span>житло</span> під <br> кожну особистість</h1>
+                    <p>Вибір власного житла - це один з найважливіших рішень у житті людини. Це не дивно, адже від вибору житла залежатиме комфорт і затишок проживання в певному середовищі кожної людинию.
+                    <br>
+                    Саме тому перед придбанням нової квартири, потрібно обов'язково ретельно підійти до цього питання, щоб не помилитися і зробити максимально правильний вибір квартири для свого подальшого життя.
+                    </p>
+                </div>
+            </div>
+        </div>
+    </div>
 
-    <button type="button" class="test">Press me!</button>
-    <button class="btn--liveChat">Live chat</button>
+    <div class="housing">
+        <div class="container">
+            <div class="row">
+                    <div class="col-3 main_smart">
+                            <div class="yellow">
+                                <img src="../../../img/Vector Smart Object.png">
+                            </div>
+                            <h4>Продаж квартир</h4>
+                            <p>Ми підберемо квартиру на любий смк в районі, який вас цікавить</p>
+                </div>
+                    <div class="col-3 main_smart">
+                            <div class="yellow">
+                                <img src="../../../img/Vector Smart Object_2.png">
+                            </div>
+                            <h4>Новобудови</h4>
+                            <p>Постійне оновлення ринку, тільки надійні забудовники</p>
+                </div>
+                    <div class="col-3 main_smart">
+                            <div class="yellow">
+                                <img src="../../../img/Vector Smart Object_3.png">
+                            </div>
+                            <h4>Житлові будинки</h4>
+                            <p>Окремий будинок - мрія кожної родини. Найкращі будинки на будь який смак</p>
+                </div>
+                    <div class="col-3 main_smart">
+                            <div class="yellow">
+                                <img src="../../../img/Vector Smart Object_4.png">
+                            </div>
+                            <h4>Елітне житло</h4>
+                            <p>Підбір індивідуального житла для кожної особистості</p>
+                </div>
+                <div class="col-12 btn">
+                    <button> Більше >> </button>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="choice">
+        <div class="container">
+            <div class="row">
+    
+                <div class="col-6 photo">
+                    <div class="border"></div>
+                    <img src="../../../img/foto.png">
+                </div>
+    
+                <div class="col-6 select">
+                    <h1>Зробіть <span>вибір</span></h1>
+                    <select>
+                        <option disabled selected>Місто</option>
+                        <option></option>
+                    </select>
+                    <select>
+                        <option disabled selected>Тип житла</option>
+                        <option></option>
+                    </select>
+                    <select>
+                        <option disabled selected>Площа</option>
+                        <option></option>
+                    </select>
+                    <select>
+                        <option disabled selected>Вартість</option>
+                        <option></option>
+                    </select>
+                    <button class="gray_btn">Показати все</button>
+                    <button class="yellow_btn">Вперед >></button>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="main-fluid">
+        <div class="container">
+            <div class="advantages">
+                <h2 class="col-12">деякі наші <span>переваги</span></h2>
+                <p class="col-12">Переконайтеся в тому, що ми найкращі, ряд переваг над нашими конкурентами</p> 
+            </div>
+            <div class="advantages_list d-flex col-12 flex-wrap">
+                <div class="row col-12">
+                    <div class="col-4 d-block">
+                        <img src="../../../img/induvidyalnui_pidhid.png" alt="in_pid"/>
+                        <h4>індивідуальний підхід</h4>
+                    </div>
+                    <div class="col-4 d-block">
+                        <img src="../../../img/naivushchi_standartu.png" alt="high_standarts"/>
+                        <h4>найвищі стандарти</h4>
+                    </div>
+                    <div class="col-4 d-block">
+                        <img src="../../../img/yuruduchna_pidtrumka.png" alt="yur_support"/>
+                        <h4>юридична підтримка</h4>
+                    </div>
+                </div>
+                <br><br><br><br><br><br><br><br>
+                <div class="row col-12">
+                    <div class="col-4 d-block">
+                        <img src="../../../img/gnychkui_diapazon_tcin.png" alt="diapason_tsin"/>
+                        <h4>гнучкий діапазон цін</h4>
+                    </div>
+                    <div class="col-4 d-block">
+                        <img src="../../../img/garantiya_povernennya_koshtiv.png" alt="garantiya"/>
+                        <h4>гарнатія повернення <br> коштів</h4>
+                    </div>
+                    <div class="col-4 d-block">
+                        <img src="../../../img/24-7_obslygovyvannya_zamovnukiv.png" alt="24-7-servise"/>
+                        <h4>24/7 обслуговування <br> замовників</h4>
+                    </div>
+                    <br>
+                    <button>Більше >></button>
+                </div>
+            </div>
+        </div>
+        <div class="container lightgrey">
+            <h2>ми пропонуємо<br>
+                <span>житло таких рівнів</span></h2>
+                <p>Ми допоможемо підібрати елітне житло різних рівнів на будь який <br>смак для найвибагливіших замовників</p>
+            <div class="house_level d-flex flex-wrap-wrap col-12">
+                <div id="standart">
+                    <h3>STANDART</h3>
+                    <img src="../../../img/standart-home.png" alt="standart_home">
+                    <button>Підібрати</button>
+                </div>
+                <div id="luxory">
+                    <h3>LUXURY</h3>
+                    <img src="../../../img/luxury-homes-in-texas.png" alt="luxury_home">
+                    <button>Підібрати</button>
+                </div>
+                <div id="premium">
+                    <h3>PREMIUM</h3>
+                    <img src="../../../img/premium-house.png" alt="premium_home">
+                    <button>Підібрати</button>
+                </div>
+            </div>
+        </div>
+    </div>
+    //= rewiew.html
 </main>
+<script src="../js/main_home.js"></script>;
+<script src="../js/main.js"></script>;
