--- a/src/template/rewiew.html
+++ b/src/template/rewiew.html
@@ -1,3 +1,4 @@
+<!--Блок з відгуками. Не погане довповнення для сторінок-->
 <div class="container">
     <h2>що говорять наші <span>щасливі клієнти</span></h2>
     <div class="quote_hr_div d-flex col-3">
