import header, top-header, footer - disabled!

--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -7,11 +7,9 @@
 @import 'mixins';
 @import 'buttons';
 
-
-
-@import 'views/top-header';
-@import 'views/header';
-@import 'views/footer';
+// @import 'views/top-header';
+// @import 'views/header';
+// @import 'views/footer';
 
 @import 'views/main_home';
 @import 'views/rewiew';
