--- a/src/css/views/_rewiew.scss
+++ b/src/css/views/_rewiew.scss
@@ -22,7 +22,7 @@
     margin-top: 26px;
 }
 .qoute_circle p{
-    font-family: Proxima-Nova-Bold;
+    // font-family: Proxima-Nova-Bold;
     color: white;
     font-size: 55px;
     line-height: 0px;
