--- a/src/css/views/_header.scss
+++ b/src/css/views/_header.scss
@@ -1,103 +1,5 @@
-.header{
-    background-image: url(../../img/BGimage.png);
-    background-size: cover;
-    background-position: center;
-    height: 500px; 
-    margin: 0;
-    padding: 0;   
-}
-
-.header_part_1{  
-    width: 100%;
-    height: 5px;
-    background-color: $bg-header--color-primary_2;    
-}
-
-.header_part_2{  
-    width: 100%;
-    height: 65px;   
-    background-color: $bg-header--color-primary_1;    
-    box-sizing: border-box;          
-    span,p {
-        display: inline-block;
-        color: $default--color__2;
+header{
+    h1{
+        color: green;
     }
-    p{
-        @include font(17px, $font-proximanova-semibold, $font-text--color-primary, normal);            
-    }   
-    span{
-        @include font(20px, $font-proximanova-semibold, $font-text--color-primary, normal);           
-                              
-    }  
-    .logo{
-        position: relative;
-        img{
-            position: absolute;
-            top: 3px;
-        }
-        span{
-            position: absolute;
-            left: 70px;
-            top:5px
-        }     
-    }
-    .contact{       
-        p{
-            margin-left: 7px;
-            margin-top: 25px;         
-        }
-        img{
-            margin-left: 25px;
-        }
-    }    
-}
-         
-.header_part_3{  
-    @include font(18px, $font-sfui, $font-text--color-primary, normal);
-    background-color: $bg-main--color-primary_1;
-    width: 100%;
-    height: 44px;
-    display: flex;
-    align-items: center; 
-    box-shadow: 0px 5px 5px rgba(0,0,0,0.5);
-    .menu{
-        display: flex;
-        justify-content: space-between;
-    }       
-    a{
-        font-size: 18px;
-        color: $default--color__2;
-        text-decoration: none;
-    }
-}
-
-.header_part_4{    
-    padding-top: 70px;
-    text-align: center;
-
-    .name_1{
-        @include font(60px, $font-proximanova-black, $default--color__1, normal);
-        line-height: 50px; 
-        text-transform: uppercase;
-        text-shadow: 0px 2px 5px rgba(0,0,0,0.5);   
-        span{
-            color: $font-span--color-primary;
-        }
-    }
-
-    p{
-        margin-top: 34px;
-        @include font(20px, $font-proximanova-regular, $default--color__1, normal);    
-    }
-
-    button{
-        height: 40px;
-        width: 145px;
-        background-color: $btn--bg-color-primary_1;
-        border:1px $btn--bg-color-primary_1 solid;
-        border-radius: 20px;
-        font-size: 18px;
-        color: $default--color__2;
-        cursor: pointer;       
-    }  
 }
