--- a/src/template/main_home.html
+++ b/src/template/main_home.html
@@ -17,37 +17,46 @@
         <div class="container">
             <div class="row">
                     <div class="col-3 main_smart">
-                            <div class="yellow">
-                                <img src="../../../img/Vector Smart Object.png">
-                            </div>
+                        <div class="yellow">
+                            <img src="../../../img/Vector Smart Object.png">
+                        </div>
+                        <div class="main_smart_div">
                             <h4>Продаж квартир</h4>
                             <p>Ми підберемо квартиру на любий смк в районі, який вас цікавить</p>
+                        </div>
                 </div>
                     <div class="col-3 main_smart">
-                            <div class="yellow">
-                                <img src="../../../img/Vector Smart Object_2.png">
-                            </div>
+                        <div class="yellow">
+                            <img src="../../../img/Vector Smart Object_2.png">
+                        </div>
+                        <div class="main_smart_div">
                             <h4>Новобудови</h4>
                             <p>Постійне оновлення ринку, тільки надійні забудовники</p>
+                        </div>
                 </div>
                     <div class="col-3 main_smart">
-                            <div class="yellow">
-                                <img src="../../../img/Vector Smart Object_3.png">
-                            </div>
+                        <div class="yellow">
+                            <img src="../../../img/Vector Smart Object_3.png">
+                        </div>
+                        <div class="main_smart_div">
                             <h4>Житлові будинки</h4>
                             <p>Окремий будинок - мрія кожної родини. Найкращі будинки на будь який смак</p>
-                </div>
+                        </div>
+                    </div>
                     <div class="col-3 main_smart">
-                            <div class="yellow">
-                                <img src="../../../img/Vector Smart Object_4.png">
-                            </div>
+                        <div class="yellow">
+                            <img src="../../../img/Vector Smart Object_4.png">
+                        </div>
+                        <div class="main_smart_div">
                             <h4>Елітне житло</h4>
                             <p>Підбір індивідуального житла для кожної особистості</p>
-                </div>
-                <div class="col-12 btn">
-                    <button> Більше >> </button>
-                </div>
+                        </div>
+                    </div>
             </div>
+            
+        </div>
+        <div class="col-12 btn">
+            <button class="btn--orange"> Більше >> </button>
         </div>
     </div>
     <div class="choice">
@@ -77,8 +86,10 @@
                         <option disabled selected>Вартість</option>
                         <option></option>
                     </select>
-                    <button class="gray_btn">Показати все</button>
-                    <button class="yellow_btn">Вперед >></button>
+                    <div class="d-block col-5 offset-2">
+                        <button class="btn--grey">Показати все</button>
+                        <button class="btn--orange">Вперед >></button>
+                    </div>
                 </div>
             </div>
         </div>
@@ -87,39 +98,39 @@
         <div class="container">
             <div class="advantages">
                 <h2 class="col-12">деякі наші <span>переваги</span></h2>
-                <p class="col-12">Переконайтеся в тому, що ми найкращі, ряд переваг над нашими конкурентами</p> 
+                <p>Переконайтеся в тому, що ми найкращі, ряд переваг над нашими конкурентами</p> 
             </div>
             <div class="advantages_list d-flex col-12 flex-wrap">
                 <div class="row col-12">
                     <div class="col-4 d-block">
-                        <img src="../../../img/induvidyalnui_pidhid.png" alt="in_pid"/>
+                        <img src="../../../img/individual approach.png" alt="in_pid"/>
                         <h4>індивідуальний підхід</h4>
                     </div>
                     <div class="col-4 d-block">
-                        <img src="../../../img/naivushchi_standartu.png" alt="high_standarts"/>
+                        <img src="../../../img/the highest standards.png" alt="high_standarts"/>
                         <h4>найвищі стандарти</h4>
                     </div>
                     <div class="col-4 d-block">
-                        <img src="../../../img/yuruduchna_pidtrumka.png" alt="yur_support"/>
+                        <img src="../../../img/lawyers support.png" alt="yur_support"/>
                         <h4>юридична підтримка</h4>
                     </div>
                 </div>
                 <br><br><br><br><br><br><br><br>
                 <div class="row col-12">
                     <div class="col-4 d-block">
-                        <img src="../../../img/gnychkui_diapazon_tcin.png" alt="diapason_tsin"/>
+                        <img src="../../../img/flexib prices.png" alt="diapason_tsin"/>
                         <h4>гнучкий діапазон цін</h4>
                     </div>
                     <div class="col-4 d-block">
-                        <img src="../../../img/garantiya_povernennya_koshtiv.png" alt="garantiya"/>
+                        <img src="../../../img/money b.png" alt="garantiya"/>
                         <h4>гарнатія повернення <br> коштів</h4>
                     </div>
                     <div class="col-4 d-block">
-                        <img src="../../../img/24-7_obslygovyvannya_zamovnukiv.png" alt="24-7-servise"/>
+                        <img src="../../../img/serv.png" alt="24-7-servise"/>
                         <h4>24/7 обслуговування <br> замовників</h4>
                     </div>
                     <br>
-                    <button>Більше >></button>
+                    <button class="btn--orange">Більше >></button>
                 </div>
             </div>
         </div>
@@ -131,17 +142,17 @@
                 <div id="standart">
                     <h3>STANDART</h3>
                     <img src="../../../img/standart-home.png" alt="standart_home">
-                    <button>Підібрати</button>
+                    <button class="btn--orange">Підібрати</button>
                 </div>
                 <div id="luxory">
                     <h3>LUXURY</h3>
                     <img src="../../../img/luxury-homes-in-texas.png" alt="luxury_home">
-                    <button>Підібрати</button>
+                    <button class="btn--orange">Підібрати</button>
                 </div>
                 <div id="premium">
                     <h3>PREMIUM</h3>
                     <img src="../../../img/premium-house.png" alt="premium_home">
-                    <button>Підібрати</button>
+                    <button class="btn--orange">Підібрати</button>
                 </div>
             </div>
         </div>
