--- a/src/template/rewiew.html
+++ b/src/template/rewiew.html
@@ -1,4 +1,5 @@
 <!--Блок з відгуками. Не погане довповнення для сторінок-->
+
 <div class="container">
     <h2>що говорять наші <span>щасливі клієнти</span></h2>
     <div class="quote_hr_div d-flex col-3">
@@ -25,7 +26,7 @@
     </div>
     
     <div class="row col-12">
-        <button>Більше >></button>
+        <button class="btn--orange">Більше >></button>
     </div>
 </div>
 <script src="../js/rewiew.js"></script>
