--- a/src/css/views/_rewiew.scss
+++ b/src/css/views/_rewiew.scss
@@ -1,6 +1,5 @@
-.text_div{
-    display: none;
-    width: 90%;
+h2{
+    text-transform: uppercase;
 }
 .text_div:nth-child(2){
     display: inline-block;
@@ -10,22 +9,21 @@
     cursor: pointer;
 }
 .quote_hr_div{
-    border-bottom: solid 2px #4e4751;
+    border-bottom: solid 2px $default--color__2;
     margin: 25px auto;
     height: 50px;
     justify-content: center;
     position: relative;
 }
 .qoute_circle{
-    background-color: #4e4751;
+    background-color: $default--color__2;
     height: 42px;
     border-radius: 50%;
     margin-top: 26px;
     position: relative;
 }
 #scobochki{
-    // font-family: Proxima-Nova-Bold;
-    color: white;
+    @include font(18px, $font-proximanova-bold, $default--color__1, normal);
     font-size: 55px;
     line-height: 0px;
     display: block;
@@ -53,12 +51,14 @@
     cursor: pointer;
 }
 #root span{
-    color:#4e4751;
+    color: $default--color__2;
     text-transform: uppercase;
 }
 .text_div{
     height: 120px;
     position: relative;
+    display: none;
+    width: 90%;
 }
 #carousel{
     display: block;
@@ -66,4 +66,8 @@
 }
 .container{
     margin-top: 80px;
+    text-align: center;
+}
+button{
+    margin: 10px auto;
 }
