trying fix conflickt

--- a/src/css/views/_main_home.scss
+++ b/src/css/views/_main_home.scss
@@ -131,6 +131,9 @@
     padding: 25px;
     margin-top: 50px;
 }
+.advantages_list button{
+    margin-top: 100px;
+}
 .house_level h3{
     color: $font-text--color-primary;
     margin-top: 30px;
