--- a/src/template/main_home.html
+++ b/src/template/main_home.html
@@ -16,42 +16,42 @@
     <div class="housing">
         <div class="container">
             <div class="row">
-                    <div class="col-3 main_smart">
-                        <div class="yellow">
-                            <img src="../../../img/Vector Smart Object.png">
-                        </div>
-                        <div class="main_smart_div">
-                            <h4>Продаж квартир</h4>
-                            <p>Ми підберемо квартиру на любий смк в районі, який вас цікавить</p>
-                        </div>
-                </div>
-                    <div class="col-3 main_smart">
-                        <div class="yellow">
-                            <img src="../../../img/Vector Smart Object_2.png">
-                        </div>
-                        <div class="main_smart_div">
-                            <h4>Новобудови</h4>
-                            <p>Постійне оновлення ринку, тільки надійні забудовники</p>
-                        </div>
-                </div>
-                    <div class="col-3 main_smart">
-                        <div class="yellow">
-                            <img src="../../../img/Vector Smart Object_3.png">
-                        </div>
-                        <div class="main_smart_div">
-                            <h4>Житлові будинки</h4>
-                            <p>Окремий будинок - мрія кожної родини. Найкращі будинки на будь який смак</p>
-                        </div>
+                <div class="col-3 main_smart">
+                    <div class="yellow">
+                        <img src="../../../img/Vector Smart Object.png">
                     </div>
-                    <div class="col-3 main_smart">
-                        <div class="yellow">
-                            <img src="../../../img/Vector Smart Object_4.png">
-                        </div>
-                        <div class="main_smart_div">
-                            <h4>Елітне житло</h4>
-                            <p>Підбір індивідуального житла для кожної особистості</p>
-                        </div>
+                    <div class="main_smart_div">
+                        <h4>Продаж квартир</h4>
+                        <p>Ми підберемо квартиру на любий смк в районі, який вас цікавить</p>
                     </div>
+                </div>
+                <div class="col-3 main_smart">
+                    <div class="yellow">
+                        <img src="../../../img/Vector Smart Object_2.png">
+                    </div>
+                    <div class="main_smart_div">
+                        <h4>Новобудови</h4>
+                        <p>Постійне оновлення ринку, тільки надійні забудовники</p>
+                    </div>
+                </div>
+                <div class="col-3 main_smart">
+                    <div class="yellow">
+                        <img src="../../../img/Vector Smart Object_3.png">
+                    </div>
+                    <div class="main_smart_div">
+                        <h4>Житлові будинки</h4>
+                        <p>Окремий будинок - мрія кожної родини. Найкращі будинки на будь який смак</p>
+                    </div>
+                </div>
+                <div class="col-3 main_smart">
+                    <div class="yellow">
+                        <img src="../../../img/Vector Smart Object_4.png">
+                    </div>
+                    <div class="main_smart_div">
+                        <h4>Елітне житло</h4>
+                        <p>Підбір індивідуального житла для кожної особистості</p>
+                    </div>
+                </div>
             </div>
             
         </div>
@@ -129,7 +129,6 @@
                         <img src="../../../img/serv.png" alt="24-7-servise"/>
                         <h4>24/7 обслуговування <br> замовників</h4>
                     </div>
-                    <br>
                     <button class="btn--orange">Більше >></button>
                 </div>
             </div>
@@ -157,7 +156,7 @@
             </div>
         </div>
     </div>
-    //= rewiew.html
+    //= review.html
 </main>
 <script src="../js/main_home.js"></script>;
 <script src="../js/main.js"></script>;
