--- a/src/template/review.html
+++ b/src/template/review.html
@@ -29,4 +29,4 @@
         <button class="btn--orange">Більше >></button>
     </div>
 </div>
-<script src="../js/rewiew.js"></script>
+<script src="../js/review.js"></script>
