--- a/src/template/header_we_offer.html
+++ b/src/template/header_we_offer.html
@@ -1,5 +1,5 @@
 <header>
-    <div class="container-fluid header_2"> 
+    <div class="container-fluid header_2">
 
         <div class="header_2_part_1">
         </div>
@@ -38,7 +38,7 @@
                         <a href="/index.html">Головна</a>
                         <a href="/about.html">Про нас</a>
                         <a href="/guarantee.html">Гарантії</a>
-                        <a href="/we_offer.html">Що пропонуємо</a>
+                        <a href="">Що пропонуємо</a>
                         <a href="">Замовити</a>
                         <a href="">Ціни</a>
                         <a href="">Відгуки</a>
@@ -54,10 +54,10 @@
                 <div class="row">
                     <div class="col-12">
                         <h1>
-                            КВАРТИРИ <span>ДЛЯ ВАС</span>
+                            ЩО <span>ПРОПОНУЄМО</span>
                         </h1>
                         <p>
-                            Головна >> Квартири для Вас
+                            Головна >> Що пропонуємо
                         </p>
                     </div>
                 </div>
