--- a/src/template/main_home.html
+++ b/src/template/main_home.html
@@ -64,7 +64,7 @@
                             <div class="border"></div>
                             <img src="../../../img/foto.png">
                         </div>
-                        <div class="col-6 select_div">
+                        <div class="col-6 order-options">
                             <h2>Зробіть <span>вибір</span></h2>
                             <select>
                                 <option disabled selected>Місто</option>
