--- a/src/template/header.html
+++ b/src/template/header.html
@@ -40,7 +40,7 @@
                         <a href="/about.html">Про нас</a>
                         <a href="/guarantee.html">Гарантії</a>
                         <a href="">Що пропонуємо</a>
-                        <a href="">Замовити</a>
+                        <a href="/order.html">Замовити</a>
                         <a href="">Ціни</a>
                         <a href="">Відгуки</a>
                         <a href="">Знижки</a>
