Created order page, added new setting in settings, added settings in main home

--- a/src/css/_settings.scss
+++ b/src/css/_settings.scss
@@ -118,7 +118,7 @@ input:hover {
   }
   }
 
-// Налаштування select в блоці Зробіть вибір 
+// Налаштування меню Зробіть вибір
 .order-options{
   select {
     width: 100%;
