--- a/src/template/main_home.html
+++ b/src/template/main_home.html
@@ -4,7 +4,7 @@
             <div class="container">
                 <div class="row">
                     <div class="col-12 text">
-                        <h1>Підбираємо <span>житло</span> під <br> кожну особистість</h1>
+                        <h1>Підбираємо <span class="yellow">житло</span> під <br> кожну особистість</h1>
                         <p class="text-title">Вибір власного житла - це один з найважливіших рішень у житті людини. Це не дивно, адже від вибору житла залежатиме комфорт і затишок проживання в певному середовищі кожної людинию.
                         <br>
                         Саме тому перед придбанням нової квартири, потрібно обов'язково ретельно підійти до цього питання, щоб не помилитися і зробити максимально правильний вибір квартири для свого подальшого життя.
@@ -17,7 +17,7 @@
             <div class="container">
                 <div class="row">
                     <div class="col-3 main_smart">
-                        <div class="yellow">
+                        <div class="yellow_circle ">
                             <img src="../../../img/Vector Smart Object.png">
                         </div>
                         <div class="main_smart_div">
@@ -26,7 +26,7 @@
                         </div>
                     </div>
                     <div class="col-3 main_smart">
-                        <div class="yellow">
+                        <div class="yellow_circle">
                             <img src="../../../img/Vector Smart Object_2.png">
                         </div>
                         <div class="main_smart_div">
@@ -35,7 +35,7 @@
                         </div>
                     </div>
                     <div class="col-3 main_smart">
-                        <div class="yellow">
+                        <div class="yellow_circle">
                             <img src="../../../img/Vector Smart Object_3.png">
                         </div>
                         <div class="main_smart_div">
@@ -44,7 +44,7 @@
                         </div>
                     </div>
                     <div class="col-3 main_smart">
-                        <div class="yellow">
+                        <div class="yellow_circle">
                             <img src="../../../img/Vector Smart Object_4.png">
                         </div>
                         <div class="main_smart_div">
@@ -59,13 +59,13 @@
             </div>
             <div class="choice">
                 <div class="container">
-                    <div class="row">
-                        <div class="col-6 photo">
+                    <div class="d-flex justify-between">
+                        <div class="col-6 order-img d-flex justify-start">
                             <div class="border"></div>
                             <img src="../../../img/foto.png">
                         </div>
                         <div class="col-6 order-options">
-                            <h2>Зробіть <span>вибір</span></h2>
+                            <h2>Зробіть <span class="yellow">вибір</span></h2>
                             <select>
                                 <option disabled selected>Місто</option>
                                 <option></option>
@@ -82,7 +82,7 @@
                                 <option disabled selected>Вартість</option>
                                 <option></option>
                             </select>
-                            <div class="d-flex col-12">
+                            <div class="d-flex col-12 justify-end">
                                 <button class="btn--show_all">Показати все</button>
                                 <button class="btn--forward">Вперед >></button>
                             </div>
@@ -92,7 +92,7 @@
             </div>
             <div class="container">
                 <div class="advantages">
-                    <h2 class="col-12">деякі наші <span>переваги</span></h2>
+                    <h2 class="col-12">деякі наші <span class="yellow">переваги</span></h2>
                     <p class="text-title">Переконайтеся в тому, що ми найкращі, ряд переваг над нашими конкурентами</p> 
                 </div>
                 <div class="advantages_list d-flex col-12 flex-wrap">
@@ -129,7 +129,7 @@
             </div>
             <div class="container lightgrey">
                 <h2>ми пропонуємо<br>
-                    <span>житло таких рівнів</span></h2>
+                    <span class="yellow">житло таких рівнів</span></h2>
                     <p class="text-title">Ми допоможемо підібрати елітне житло різних рівнів на будь який <br>смак для найвибагливіших замовників</p>
                 <div class="house_level d-flex justify-evently">
                     <div id="standart">
