--- a/src/template/order.html
+++ b/src/template/order.html
@@ -1,17 +1,18 @@
 <section>
     <div class="container">
-        <article class="text-title">Вибір власного житла- це один з найважливіших рішень у житті людини. Це не дивно, адже від вибору житла залежатиме комфорт і затишок проживання в певному середовищі кожної людини. 
-            Саме тому перед придбанням нової квартири, потрібно обов'язково ретельно підійти до цього питання, щоб не помилитися і 
-            зробити максимально правильний вибір квартири для свого подальшого життя.</article>
+        <article class="mt-4"><p class="text-title">Вибір власного житла- це один з найважливіших рішень у житті людини. Це не дивно, адже від вибору житла залежатиме комфорт і затишок проживання в певному середовищі кожної людини. 
+            <br>Саме тому перед придбанням нової квартири, потрібно обов'язково ретельно підійти до цього питання, щоб не помилитися і 
+            зробити максимально правильний вибір квартири для свого подальшого життя.</p></article>
 
-        <article class="main-text">Для вашої зручності на порталі оголошення про продаж квартир згрупували за кількістю кімнат: однокімнатні, двокімнатні і трикімнатні квартири в Києві, щоб ви могли зразу перейти до перегляду пропозицій, які вас цікавлять. Також ви одразу можете дізнатися ціни на квартири в Києві на масивах Печерськ, Оболонь, Позняки, Троєщина, Виноградар, Поділ, також і в інших частинах столиці, в центрі чи на окраїні Києва. Все залежить від ваших можливостей і побажань. Якщо ж вас цікавлять лише нові квартири в новобудовах Києва, радимо скористатися розділом «Новобудови в Києві», де ви знайдете квартири від забудовника з описом кожного житлового комплексу.</article>
-        <div class="row">
-            <div class="col-6 photo">
+        <article class="mt-4"><p class="main-text">Для вашої зручності на порталі оголошення про продаж квартир згрупували за кількістю кімнат: однокімнатні, двокімнатні і трикімнатні квартири в Києві, щоб ви могли зразу перейти до перегляду пропозицій, які вас цікавлять. Також ви одразу можете дізнатися ціни на квартири в Києві на масивах Печерськ, Оболонь, Позняки, Троєщина, Виноградар, Поділ, також і в інших частинах столиці, в центрі чи на окраїні Києва. Все залежить від ваших можливостей і побажань. Якщо ж вас цікавлять лише нові квартири в новобудовах Києва, радимо скористатися розділом «Новобудови в Києві», де ви знайдете квартири від забудовника з описом кожного житлового комплексу.</p></article>
+        
+        <div class="row mt-4">
+            <div class="col-6 order-img">
                 <div class="border"></div>
                 <img src="../../../img/order/foto.png">
             </div>
             <div class="col-6 order-options">
-                <h2>Зробіть <span>вибір</span></h2>
+                <h2 class="mt-4">Зробіть <span class="yellow">вибір</span></h2>
                 <select>
                     <option disabled selected>Місто</option>
                     <option></option>
