Contact us page

--- a/src/template/apartments.html
+++ b/src/template/apartments.html
@@ -1,4 +1,4 @@
-<section>
+<section class="apartments">
     <div class="container">
         <div class="row">
             <div class="col-12">
@@ -14,12 +14,12 @@
                <h5> Двокімнатна квартира в центрі міста</h5>
                <div class="flat--bcg ">
                     <div>
-                        <p><spam class="title">Місто:</spam><spam class="name">Рівне</spam></p>
-                        <p><spam class="title">Площа:</spam><spam class="name">72м<sup>2</sup></spam></p>
+                        <p><span class="title">Місто:</span><span class="name">Рівне</span></p>
+                        <p><span class="title">Площа:</span><span class="name">72м<sup>2</sup></span></p>
                      </div>
                     <div>
-                        <p><spam class="title">Тип житла:</spam><spam class="name">Квартира</spam></p>
-                        <p><spam class="title">Місто:</spam><spam class="name">Рівне</spam></p>
+                        <p><span class="title">Тип житла:</span><span class="name">Квартира</span></p>
+                        <p><span class="title">Місто:</span><span class="name">Рівне</span></p>
                     </div>
                 </div>
             <div class="btn"><button class="btn--forward">Більше>></button></div>
@@ -31,12 +31,12 @@
                 <h5> Двокімнатна квартира в центрі міста</h5>
                 <div class="flat--bcg ">
                      <div>
-                         <p><spam class="title">Місто:</spam><spam class="name">Рівне</spam></p>
-                         <p><spam class="title">Площа:</spam><spam class="name">72м<sup>2</sup></spam></p>
+                         <p><span class="title">Місто:</span><span class="name">Рівне</span></p>
+                         <p><span class="title">Площа:</span><span class="name">72м<sup>2</sup></span></p>
                       </div>
                      <div>
-                        <p><spam class="title">Тип житла:</spam><spam class="name">Квартира</spam></p>
-                        <p><spam class="title">Місто:</spam><spam class="name">Рівне</spam></p>
+                        <p><span class="title">Тип житла:</span><span class="name">Квартира</span></p>
+                        <p><span class="title">Місто:</span><span class="name">Рівне</span></p>
                      </div>
                  </div>
              <div><button class="btn--forward">Більше>></button></div>
@@ -59,12 +59,12 @@
                <h5> Двокімнатна квартира в центрі міста</h5>
                <div class="flat--bcg ">
                     <div>
-                        <p><spam class="title">Місто:</spam><spam class="name">Рівне</spam></p>
-                        <p><spam class="title">Площа:</spam><spam class="name">72м<sup>2</sup></spam></p>
+                        <p><span class="title">Місто:</span><span class="name">Рівне</span></p>
+                        <p><span class="title">Площа:</span><span class="name">72м<sup>2</sup></span></p>
                      </div>
                     <div>
-                        <p><spam class="title">Тип житла:</spam><spam class="name">Квартира</spam></p>
-                        <p><spam class="title">Місто:</spam><spam class="name">Рівне</spam></p>
+                        <p><span class="title">Тип житла:</span><span class="name">Квартира</span></p>
+                        <p><span class="title">Місто:</span><span class="name">Рівне</span></p>
                     </div>
                 </div>
             <div class="btn"><button class="btn--forward">Більше>></button></div>
@@ -76,12 +76,12 @@
                 <h5> Двокімнатна квартира в центрі міста</h5>
                 <div class="flat--bcg ">
                      <div>
-                         <p><spam class="title">Місто:</spam><spam class="name">Рівне</spam></p>
-                         <p><spam class="title">Площа:</spam><spam class="name">72м<sup>2</sup></spam></p>
+                         <p><span class="title">Місто:</span><span class="name">Рівне</span></p>
+                         <p><span class="title">Площа:</span><span class="name">72м<sup>2</sup></span></p>
                       </div>
                      <div>
-                        <p><spam class="title">Тип житла:</spam><spam class="name">Квартира</spam></p>
-                        <p><spam class="title">Місто:</spam><spam class="name">Рівне</spam></p>
+                        <p><span class="title">Тип житла:</span><span class="name">Квартира</span></p>
+                        <p><span class="title">Місто:</span><span class="name">Рівне</span></p>
                      </div>
                  </div>
                 <div><button class="btn--forward">Більше>></button></div>
