--- a/src/template/header_contact_us.html
+++ b/src/template/header_contact_us.html
@@ -54,10 +54,10 @@
                 <div class="row">
                     <div class="col-12">
                         <h1>
-                            Знижки
+                            КОНТАКТИ
                         </h1>
                         <p>
-                            Головна >> Знижки
+                            Головна >> Контакти
                         </p>
                     </div>
                 </div>
