--- a/src/template/main_home.html
+++ b/src/template/main_home.html
@@ -1,4 +1,4 @@
-<main>
+<main class="home">
     <div class="main-fluid">
         <div class="choice_of_housing">
             <div class="container">
