--- a/src/template/we_offer.html
+++ b/src/template/we_offer.html
@@ -20,7 +20,7 @@
 
 
 
-<main>
+<main class="home">
     <div class="main-fluid">
         <div class="housing">
             <div class="container">
