--- a/src/template/header_internal.html
+++ b/src/template/header_internal.html
@@ -43,7 +43,7 @@
                         <a href="">Ціни</a>
                         <a href="">Відгуки</a>
                         <a href="/discounts.html">Знижки</a>
-                        <a href="">Контакти</a>
+                        <a href="/contact_us.html">Контакти</a>
                     </div>
                 </div>
             </div>
