--- a/src/template/header_we_offer.html
+++ b/src/template/header_we_offer.html
@@ -42,8 +42,8 @@
                         <a href="">Замовити</a>
                         <a href="">Ціни</a>
                         <a href="">Відгуки</a>
-                        <a href="">Знижки</a>
-                        <a href="">Контакти</a>
+                        <a href="/discounts.html">Знижки</a>
+                        <a href="/contact_us.html">Контакти</a>
                     </div>
                 </div>
             </div>
