--- a/src/template/contact_us.html
+++ b/src/template/contact_us.html
@@ -1,5 +1,5 @@
 <main class="home">
-    <div class="container contact">
+    <div class="container contact_us">
         <div class="row">
             <div class="col-12">
                 <p class="text-title">
