--- a/src/css/_settings.scss
+++ b/src/css/_settings.scss
@@ -76,7 +76,7 @@ input:hover {
   border-radius: 30px;
 }
 
-// Інпутік
+// textarea
 textarea {
   background-color: $default--color__1;
   border: $default--color__2 solid 1px;
@@ -96,7 +96,7 @@ textarea:active {
   border-radius: 30px;
 }
 textarea:hover {
-  background-color: bg-main--color-primary_2;
+  background-color: $bg-main--color-primary_2;
   border: $btn--bg-color-primary_1 solid 1px;
   width: 100%;
   @include font(15px, $font-proximanova-regular, $font-text--color-primary, 400);
