added links in to headers

--- a/src/template/header_we_offer.html
+++ b/src/template/header_we_offer.html
@@ -39,10 +39,10 @@
                         <a href="/about.html">Про нас</a>
                         <a href="/guarantee.html">Гарантії</a>
                         <a href="/we_offer.html">Що пропонуємо</a>
-                        <a href="">Замовити</a>
+                        <a href="/order.html">Замовити</a>
                         <a href="">Ціни</a>
                         <a href="">Відгуки</a>
-                        <a href="">Знижки</a>
+                        <a href="/discounts.html">Знижки</a>
                         <a href="">Контакти</a>
                     </div>
                 </div>
