--- a/src/template/header_order.html
+++ b/src/template/header_order.html
@@ -38,11 +38,11 @@
                         <a href="/index.html">Головна</a>
                         <a href="/about.html">Про нас</a>
                         <a href="/guarantee.html">Гарантії</a>
-                        <a href="">Що пропонуємо</a>
+                        <a href="/we_offer.html">Що пропонуємо</a>
                         <a href="/order.html">Замовити</a>
                         <a href="">Ціни</a>
                         <a href="">Відгуки</a>
-                        <a href="">Знижки</a>
+                        <a href="/discounts.html">Знижки</a>
                         <a href="">Контакти</a>
                     </div>
                 </div>
