--- a/src/template/header.html
+++ b/src/template/header.html
@@ -42,7 +42,7 @@
                         <a href="/we_offer.html">Що пропонуємо</a>
                         <a href="">Замовити</a>
                         <a href="">Ціни</a>
-                        <a href="">Відгуки</a>
+                        <a href="testimonials.html">Відгуки</a>
                         <a href="/discounts.html">Знижки</a>
                         <a href="/contact_us.html">Контакти</a>
                     </div>
