--- a/src/template/contact_us.html
+++ b/src/template/contact_us.html
@@ -30,7 +30,7 @@
                             <input type="text" placeholder="Телефон">
                         </div>
                         <div class="col-6">
-                            <input type="text" placeholder="Email">
+                            <input type="text" placeholder="E-mail">
                         </div>
                     </div>
                     <div class="row">
@@ -41,7 +41,7 @@
                     <div class="row">
                         <div class="d-flex col-12">
                             <button class="btn--forward" type="submit">
-                                Відправить >>
+                                Відправити >>
                             </button>
                         </div>
                     </div>
