--- a/src/template/header_testimonials.html
+++ b/src/template/header_testimonials.html
@@ -54,10 +54,10 @@
                 <div class="row">
                     <div class="col-12">
                         <h1>
-                            КВАРТИРИ <span>ДЛЯ ВАС</span>
+                           ВІДГУКИ
                         </h1>
                         <p>
-                            Головна >> Квартири для Вас
+                            Головна >> Відгуки
                         </p>
                     </div>
                 </div>
