--- a/src/css/_variables.scss
+++ b/src/css/_variables.scss
@@ -36,5 +36,11 @@ $default--color__2: #4b434f;
 $default--color__3: rgba(54,54,54,.92); //footer
 $default--color__4: rgba(0,0,0,.7); //footer
 
+//Flats bcg
+
+$bcg-border-flats: #f8f8f8;
+$bcg-border-pagination: #dadada;
+$shadow-pagination: rgba(109, 109, 109, 0.3);
+
 
 
