--- a/src/css/views/_apartments.scss
+++ b/src/css/views/_apartments.scss
@@ -6,7 +6,7 @@
     justify-content: space-around;
     padding-top: 30px;
     padding-bottom: 20px;
-    border: 1px solid #f8f8f8;
+    border: 1px solid $bcg-border-flats;
     margin-bottom: 30px;
   }
 
@@ -38,7 +38,29 @@
   }
 
   .space {
-    height: 40px;
+    height: 80px;
   }
+
+//   .border {
+//     @include img_border(360px, 485px, 50px, -65px, $bg-img-border--color-primary_1, 16px);
+// }
+
+.border {
+  @include img_border(415px, 315px, 125px, 20px, $bg-img-border--color-primary_1, 16px);
+}
+
+.border-right{
+  @include img_border(415px, 315px, 0px, 20px, $bg-img-border--color-primary_1, 16px);
+}
+
+
+img{
+position: relative;
+}
+
+.imgright{
+  display: flex;
+  justify-content: flex-end;
+}
 
 }     
