--- a/src/template/apartments.html
+++ b/src/template/apartments.html
@@ -9,6 +9,7 @@
 
             <div class="col-lg-6 col-sm-12">
                 <img src="../img/apartments/Apartment1.png" />
+                <div class="border"></div>
             </div>
             <div class="offset-lg-1 col-lg-5 col-sm-12 info">
                <h5> Двокімнатна квартира в центрі міста</h5>
@@ -22,7 +23,7 @@
                         <p><span class="title">Місто:</span><span class="name">Рівне</span></p>
                     </div>
                 </div>
-            <div class="btn"><button class="btn--forward">Більше>></button></div>
+            <div class="btn"><button class="btn--forward" ><a href="../select_apartment.html"> Більше>></a></button></div>
             </div>
 
             <div class="col-12 space"> </div>
@@ -43,7 +44,9 @@
              </div>
 
              <div class="offset-lg-1 col-lg-6 col-sm-12">
-                <img src="../img/apartments/Apartment2.png" />
+                <div class="imgright"><img src="../img/apartments/Apartment2.png" /></div>
+                <div class="border-right"></div>
+
                 </div>
             </div>
             <div class="col-12 space"> </div>
@@ -54,6 +57,7 @@
         <div class="row">
             <div class="col-lg-6 col-sm-12">
                 <img src="../img/apartments/Apartment3.png" />
+                <div class="border"></div>
             </div>
             <div class="offset-lg-1 col-lg-5 col-sm-12 info">
                <h5> Двокімнатна квартира в центрі міста</h5>
@@ -88,8 +92,8 @@
              </div>
 
                 <div class="offset-lg-1 col-lg-6 col-sm-12">
-                    <img src="../img/apartments/Apartment4.png" />
-                </div>
+                    <div class="imgright"><img src="../img/apartments/Apartment4.png" /></div>
+                    <div class="border-right"></div>                
             </div>
 
             <div class="col-12 space"></div>
