--- a/src/css/_settings.scss
+++ b/src/css/_settings.scss
@@ -110,11 +110,14 @@ textarea:hover {
   a{
       @include font(18px, $font-sfui, $font-text--color-primary, 400);
       padding: 9px 20px 8px 20px;
+      text-decoration: none;
   }
   a:hover{
       @include font(18px, $font-sfui, $font-text-footer--color-primary_1, 400);
       background-color: $btn--bg-color-primary_2--hover;
       padding: 9px 20px 8px 20px;
+      text-decoration: none;
+
 
   }
 }
@@ -122,18 +125,26 @@ textarea:hover {
 .menu-footer{
     a{
         @include font(18px, $font-sfui, $default--color__1, 400);
+        text-decoration: none;
+
     }
     a:hover{
         @include font(18px, $font-sfui, $font-span--color-primary, 400);
+        text-decoration: none;
+
     }
 }
 
 .link-footer{
     a{
         @include font(14px, $font-proximanova-regular, $font-text-footer--color-primary_3, 400);
+        text-decoration: none;
+
     }
     a:hover{
         @include font(14px, $font-proximanova-regular, $font-span--color-primary, 400);
+        text-decoration: none;
+
     }
 }
 
@@ -141,9 +152,13 @@ textarea:hover {
 .login{
   a{
   @include font(17px, $font-proximanova-semibold, $font-text--color-primary, normal);
+  text-decoration: none;
+
   }
   a:hover{
   @include font(17px, $font-proximanova-bold, $font-text--color-primary, normal);
+  text-decoration: none;
+
   }
   }
 
