--- a/src/template/apartments.html
+++ b/src/template/apartments.html
@@ -40,7 +40,7 @@
                         <p><span class="title">Місто:</span><span class="name">Рівне</span></p>
                      </div>
                  </div>
-             <div><button class="btn--forward">Більше>></button></div>
+             <div><button class="btn--forward"><a href="../select_apartment.html"> Більше>></a></button></div>
              </div>
 
              <div class="offset-lg-1 col-lg-6 col-sm-12">
@@ -71,7 +71,7 @@
                         <p><span class="title">Місто:</span><span class="name">Рівне</span></p>
                     </div>
                 </div>
-            <div class="btn"><button class="btn--forward">Більше>></button></div>
+            <div class="btn"><button class="btn--forward"><a href="../select_apartment.html"> Більше>></a></button></div>
             </div>
 
             <div class="col-12 space"> </div>
@@ -88,7 +88,7 @@
                         <p><span class="title">Місто:</span><span class="name">Рівне</span></p>
                      </div>
                  </div>
-                <div><button class="btn--forward">Більше>></button></div>
+                <div><button class="btn--forward"><a href="../select_apartment.html"> Більше>></a></button></div>
              </div>
 
                 <div class="offset-lg-1 col-lg-6 col-sm-12">
