Add page prices.

--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -18,6 +18,7 @@
 @import 'views/about';
 
 @import 'views/offer';
+@import 'views/prices';
 @import 'views/review';
 @import 'views/discounts';
 @import 'views/apartments';
