--- a/src/template/header.html
+++ b/src/template/header.html
@@ -41,7 +41,7 @@
                         <a href="/guarantee.html">Гарантії</a>
                         <a href="/we_offer.html">Що пропонуємо</a>
                         <a href="">Замовити</a>
-                        <a href="">Ціни</a>
+                        <a href="/prices.html">Ціни</a>
                         <a href="">Відгуки</a>
                         <a href="/discounts.html">Знижки</a>
                         <a href="">Контакти</a>
