--- a/src/template/header_prices.html
+++ b/src/template/header_prices.html
@@ -1,5 +1,5 @@
 <header>
-    <div class="container-fluid header_2"> 
+    <div class="container-fluid header_2">
 
         <div class="header_2_part_1">
         </div>
@@ -42,7 +42,7 @@
                         <a href="">Замовити</a>
                         <a href="/prices.html">Ціни</a>
                         <a href="">Відгуки</a>
-                        <a href="/discounts.html">Знижки</a>
+                        <a href="">Знижки</a>
                         <a href="">Контакти</a>
                     </div>
                 </div>
@@ -54,10 +54,10 @@
                 <div class="row">
                     <div class="col-12">
                         <h1>
-                            НАШІ <span>ГАРАНТІЇ</span>
+                            НАШІ <span>ЦІНИ</span>
                         </h1>
                         <p>
-                            Головна >> Гарантії
+                            Головна >> Наші ціни
                         </p>
                     </div>
                 </div>
