--- a/src/template/header_discounts.html
+++ b/src/template/header_discounts.html
@@ -38,9 +38,9 @@
                         <a href="/index.html">Головна</a>
                         <a href="/about.html">Про нас</a>
                         <a href="/guarantee.html">Гарантії</a>
-                        <a href="">Що пропонуємо</a>
+                        <a href="/we_offer.html">Що пропонуємо</a>
                         <a href="">Замовити</a>
-                        <a href="">Ціни</a>
+                        <a href="/prices.html">Ціни</a>
                         <a href="">Відгуки</a>
                         <a href="/discounts.html">Знижки</a>
                         <a href="">Контакти</a>
