fixed the error with the picture

--- a/src/template/prices.html
+++ b/src/template/prices.html
@@ -26,6 +26,7 @@
     </div>
 </div>
 
+<div class="container">
     <div class="container prices">
         <div class="row header_prices">
             <div class="col-12 header_text">Ціни наших полуг</div>
@@ -166,3 +167,4 @@
             <div class="offset-1 col-2">10%</div>
         </div>
     </div>    
+</div>
